# autolean

./: .gitignore  README.md  demo_erdos.py  demo_for_holtz.py  demo_offline.py  pyproject.toml
benchmark/: autoresearch_erdos.py  build_erdos_corpus.py  convert_erdos_dataset.py  integrate_formal_conjectures.py  run_benchmark.py  scrape_top_comments.py
benchmark/erdos_corpus/: _corpus_summary.json  erdos_1.json  erdos_10.json  erdos_100.json  erdos_1000.json  erdos_1001.json  erdos_1002.json  erdos_1003.json  erdos_1004.json  erdos_1005.json  erdos_1006.json  erdos_1007.json  erdos_1008.json  erdos_1009.json  erdos_101.json  erdos_1010.json  erdos_1011.json  erdos_1012.json  erdos_1013.json  erdos_1014.json  erdos_1015.json  erdos_1016.json  erdos_1017.json  erdos_1018.json  erdos_1019.json  erdos_102.json  erdos_1020.json  erdos_1021.json  erdos_1022.json  erdos_1023.json  erdos_1024.json  erdos_1025.json  erdos_1026.json  erdos_1027.json  erdos_1028.json  erdos_1029.json  erdos_103.json  erdos_1030.json  erdos_1031.json  erdos_1032.json  (+1144 more)
benchmark/problems/: bertrand_postulate.json  erdos_gallai.json  erdos_ginzburg_ziv.json  erdos_ko_rado.json  erdos_mordell.json  erdos_szekeres.json  infinite_primes_4k3.json  ramsey_3_3.json  sum_prime_reciprocals.json
benchmark/problems_full/: erdos_1.json  erdos_10.json  erdos_11.json  erdos_12.json  erdos_14.json  erdos_15.json  erdos_17.json  erdos_3.json  (+2 more)
scripts/: evaluate_lean_formalizations.py  evaluate_strict_aplus.py  prove_lean_formalizations.py  prove_lean_formalizations_replan.py
specs/: requirements.md
(+15 files in other folders)
